--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <div class="row paragraph fade" id="wordcloud">
         <div class="col">
           <h1>워드클라우드</h1>
-          <div id="cloud"></div>
+          <div id="cloud" style="margin-left:-200px;"></div>
         </div>
 
       </div>
@@ -210,8 +210,9 @@
   <script src="js/main.js"></script>
   <script src="js/popPyramid.js"></script>
   <script src="js/d3chart.js"></script>
-  <script src="js/d3v4.js">
-    <script src="js/d3v3.js"></script>
+  <script src="js/d3v4.js"></script>
+  <script src="js/d3v3.js"></script>
+  <script src="js/d3v3.layout.cloud.js"></script>
 
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
