--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>KAIST 대학원 총학생회 연구환경실태조사 결과 보고서</title>
   <meta name="description" content="KAIST GSA Lab Survey Data Visualization Project">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
