--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <meta name="theme-color" content="#fafafa">
+  <meta name="theme-color" content="#ffffff">
 
 </head>
 
@@ -54,6 +54,7 @@
       <ul>
         <li><a href="#introduction">들어가며</a></li>
         <ul>
+          <li><a href="#intro-0">연환실 이야기</a></li>
           <li><a href="#intro-1">2021년 연환실</a></li>
           <li><a href="#intro-2">전체 응답자 수</a></li>
           <li><a href="#intro-3">역대 참여 인원 비교</a></li>
@@ -80,7 +81,7 @@
 
           <h1>들어가며</h1>
 
-          <h3>"연구실 생활, 나만 이렇게 힘들어?"</h3>
+          <h4 id="intro-0"><span>"연구실 생활, 나만 이렇게 힘들어?"</span></h4>
           <br>
           <p>주말 출근, 물가는 올라도 오르지 않는 월급, 불안한 실험실 환경, ... <p>
           <p>우리 연구실만 그런 것 아닐까, 한 번쯤 궁금하지 않으셨나요?</p>
@@ -89,7 +90,7 @@
           <p>우리 원총은 KAIST 대학원생의 연구환경 실상을 제대로 파악하여 제도 개선을 위한 기초 자료로 활용하기 위해 2004년부터 매년 연말 연환실을 시행하고 잇습니다. </p>
           <p>연환실을 근거로 작년 한 해에만 해도<mark>1. 석박사 인건비 계상기준 인상, 2. 연차초과자 등록금 인하, 3. 보다 유연한 전문연구요원 유연복무제 도입</mark> 등의 굵직한 정책 성과를 거뒀습니다. </p>
 
-          <h4 id="intro-1">2021년 KAIST 대학원 총학생회 연구환경 실태조사</h4>
+          <h4 id="intro-1"><span>2021년 KAIST 대학원 총학생회 연구환경 실태조사</span></h4>
           <img class="center" style="margin:auto; width:100%;" src="img/survey.png">
           <br>
           <p>올해 연구환경 실태조사의 의미는 그 여느 때보다 특별했습니다.</p>
@@ -97,26 +98,33 @@
           <p>또, 귀중하게 모인 데이터가 더욱 널리 확산되도록 하기 위해 예년과는 달리 학우 여러분이 편안하게 조사 결과를 볼 수 있도록 본 페이지를 만들었습니다.</p>
           <p>지금부터 2021년 연구환경 실태조사 결과 중 학우 여러분이 알아야 꼭 알아야 할 핵심적인 내용만을 소개드립니다!</p>
 
-          <h4 id="intro-2">전체 응답자 수</h4>
+          <h4 id="intro-2"><span>전체 응답자 수</span></h4>
           <div id="value" style="font-size:80px; text-align:center;">1648</div>
           <br>
           <p>이번 연환실에서는 무려 <mark>1,648명</mark>의 학우 여러분께서 응답해주셨습니다.</p>
           <p>이 숫자는 설문 대상 학우 6,575명 중 25.06%에 해당 하는 것으로, 학우 4명 중 1명은 이번 설문에 응답한 셈이 됩니다.</p>
           <br>
-          <h4 id="intro-3">역대 참여 인원 비교</h4>
+          <h4 id="intro-3"><span>역대 참여 인원 비교</span></h4>
           <br>
-          <div style="margin-left:50px; z-index: 0; width:3000px " id="participants"></div>
+          <div class="d-flex justify-content-center">
+            <div id="participants"></div>
+          </div>
+
+
           <br>
           <p>지난 2020년 연환실보다는 약간 감소하였지만 예년보다 조사기간이 일주일 적었던 점,학기 중인 11월에 진행한 설문조사라는 점에서 높은 응답율을 보인 것으로 내부에서는 평가하고 있습니다. </p>
           <br>
-          <h4 id="intro-4">응답자 성별 및 연령</h4>
+          <h4 id="intro-4"><span>응답자 성별 및 연령</span></h4>
           <br>
-          <div style="margin-left:50px;" id="pyramid"></div>
+          <div class="d-flex justify-content-center">
+            <div id="pyramid"></div>
+          </div>
+
           <br>
           <p>설문에 응답한 학우 여러분의 간단한 인구 통계학적 특성을 위의 인구 피라미드로 표현하였습니다.</p>
           <p>응답자 중 자신이 남성이라고 응답한 사람은 <mark>1,175명(71.3%)</mark>, 여성이라고 응답한 사람은 <mark>464명(28.16%)</mark>, 그리고 기타 성별이라고 응답한 사람은 <mark>9명(0.55%)</mark>이었습니다.</p>
           <p>&#128161; 이번 연환실 응답자의 인구통계학적 특성이 더 궁금하다면? </p>
-          <li style="margin-left:50px; margin-right:50px;"><a href="#">2021년 연구환경실태조사 응답자 정보 인포그램 바로가기</a></li>
+          <li><a href="#">2021년 연구환경실태조사 응답자 정보 인포그램 바로가기</a></li>
         </div>
       </div>
 
@@ -127,9 +135,18 @@
           <p>이번 연환실 결과를 바탕으로 자신의 경제적 환경에 대해 진단하고, 개선이 필요한 지 고민해 보시기 바랍니다. </p>
           <h4>당신이 한 달 동안 받는 월급(교내수입)은 얼마인가요?</h4>
           <br>
-          <div style="text-align: center"><input id="salaryInput" style="width:50px; text-align: center" min="0" max="10000" type="number">만원 <button class="btn btn-outline-dark" type="submit" id="cl">입력</button></div>
+<!--          <div style="text-align: center"><input style="width:80px; height:37.5px; border-width: 2px; text-align: center" min="0" max="10000" type="number">만원 <button class="btn btn-outline-dark" type="submit" id="cl">입력</button></div>-->
+          <div class="input-group mb-3 w-50 center">
+            <input id="salaryInput" style="width:10%!important;" type="number" class="form-control" placeholder="월 교내수입(만원)" min="0" max="10000" type="number">
+            <div class="input-group-append">
+              <button class="btn btn-outline-dark" type="submit" id="cl">입력</button></div>
+            </div>
+          </div>
             <div id="salaryDiv" style="display: none;">
-              <div style="margin-left:50px;" id="salaryChart"></div>
+
+              <div class="d-flex justify-content-center">
+                <div id="salaryChart"></div>
+              </div>
               <p>당신은 우리 학교 대학원생이 100명이라고 했을 때, <mark id="salaryNth"></mark>로 많은 월급을 받고 있습니다.</p>
               <p id="salaryResult"></p>
               <p>KAIST 대학원생이 받고 있는 인건비의 중위값은 <mark>150만원</mark>으로 조사되었습니다. 그러나, 이 금액은 KAIST 장학생이 인건비로 돌려받는 학연장려금2(구. 지도교수 분담금)이 포함된 금액으로, 실제 평균 금액은 이보다 더 낮을 것으로 예상됩니다.</p>
@@ -138,28 +155,30 @@
               <p>&#128161; KAIST 대학원생의 경제적 환경이 더 궁금하다면? </p>
               <li style="margin-left:50px; margin-right:50px;"><a href="#">2021년 연구환경실태조사 경제적 환경 인포그램 바로가기</a></li>
             </div>
-            </div>
-        </div>
+      </div>
+
 
       <div class="row paragraph" id="time">
         <div class="col">
           <h1 class="fade">시간</h1>
           <p>KAIST 대학원생의 하루는 어떨까요?</p>
           <p>우리의 시간은 돈만큼 소중합니다. 소중한 시간 자원이 어떻게 쓰이고 있는 지 확인해 보시기 바랍니다.</p>
-<!--          <div style="width: 1000px" class="infogram-embed" data-id="84191b7b-a045-4ff3-af27-fdd8967ee0ec" data-type="interactive" data-title="test"></div><script>!function(e,i,n,s){var t="InfogramEmbeds",d=e.getElementsByTagName("script")[0];if(window[t]&&window[t].initialized)window[t].process&&window[t].process();else if(!e.getElementById(n)){var o=e.createElement("script");o.async=1,o.id=n,o.src="https://e.infogram.com/js/dist/embed-loader-min.js",d.parentNode.insertBefore(o,d)}}(document,0,"infogram-async");</script>-->
-          <div id="timeChart"></div>
+          <div class="d-flex justify-content-center">
+            <div id="timeChart"></div>
+          </div>
+
           <p>우리 대학원생들의 주중 평균 연구실 체류시간은 <mark>9.94시간</mark>으로 조사었습니다.</p>
           <p>이 중에서 학위 연구에 사용하는 시간인 주중 평균 학위 연구시간은 <mark>7.31시간</mark>으로 나타났습니다.</p>
           <p>특이할 것은 주말에도 연구실에 체류하는 시간이 <mark>3.06시간</mark>이나 되며, 주말에 학위연구에 사용하는 시간은 <mark>3.22시간</mark>이나 됩니다.</p>
           <p>&#128161; KAIST 대학원생이 주말에도 출근하는 이유가 궁금하다면? </p>
-          <li style="margin-left:50px; margin-right:50px;"><a href="#">2021년 연구환경실태조사 연구 수행환경 인포그램 바로가기</a></li>
+          <li><a href="#">2021년 연구환경실태조사 연구 수행환경 인포그램 바로가기</a></li>
 
         </div>
       </div>
 
       <div class="row paragraph" id="happiness">
         <div class="col">
-          <h1 class="fade">만족도</h1>
+          <h1 >만족도</h1>
           <p>행복한 대학원 생활을 만드는 요인은 무엇일까요?</p>
           <p>이번 연구환경 실태조사에서는 대학원 생활의 행복도를 묻는 문항이 있었습니다.</p>
           <p>행복하다고 응답한 학우들과 불행하다고 응답한 학우들의 차이는 어디서 비롯된 것일까요? </p>
@@ -171,11 +190,12 @@
           <p>반면, 지도 교수의 지도 방식 중 ‘연구실 실적에 필요 이상 집착’과 ‘학생 간 차별적인 지도’, 그리고 연구실 생활에서 ‘주말 및 공휴일 체류 시간’, 개인 활용 공간’, ‘지나친 무관심’, ‘일과 후 업무 연락’, ‘수직적 자세/태도’는 대학원 생활 행복도에 통계적으로 유의한 수준의 부(-)의 영향을 미치고 있음</p>
         </div>
       </div>
-      <div class="row paragraph fade" id="careerpath">
+
+      <div class="row paragraph" id="careerpath">
         <div class="col">
           <h1>진로</h1>
           <!-- Create a div where the graph will take place -->
-          <div style="width: 900px; height: 900px;" id="my_dataviz"></div>
+          <div id="my_dataviz"></div>
 
           <!-- Create a div for the tooltip -->
           <div id="tooltip"></div>
@@ -184,7 +204,7 @@
         </div>
 
       </div>
-      <div class="row paragraph fade" id="wordcloud">
+      <div class="row paragraph" id="wordcloud">
         <div class="col">
           <h1>워드클라우드</h1>
           <div id="cloud" style="margin-left:-200px;"></div>
