애니메이션 / 레이아웃 변경

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
       </div>
 
-      <div class="row paragraph fade" id="money">
+      <div class="row paragraph" id="money">
         <div class="col">
           <h1>경제적 환경</h1>
           <p>경제적 환경은 연구 환경을 결정하는 가장 중요한 요소입니다.</p>
