반응형 웹 구현

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <br>
 <!--          <div style="text-align: center"><input style="width:80px; height:37.5px; border-width: 2px; text-align: center" min="0" max="10000" type="number">만원 <button class="btn btn-outline-dark" type="submit" id="cl">입력</button></div>-->
           <div class="input-group mb-3 w-50 center">
-            <input id="salaryInput" style="width:10%!important;" type="number" class="form-control" placeholder="월 교내수입(만원)" min="0" max="10000" type="number">
+            <input id="salaryInput" style="width:10%!important;" class="form-control" placeholder="월 교내수입(만원)" min="0" max="10000" type="number">
             <div class="input-group-append">
               <button class="btn btn-outline-dark" type="submit" id="cl">입력</button></div>
             </div>
