반응형 웹 구현

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <p>연환실을 근거로 작년 한 해에만 해도<mark>1. 석박사 인건비 계상기준 인상, 2. 연차초과자 등록금 인하, 3. 보다 유연한 전문연구요원 유연복무제 도입</mark> 등의 굵직한 정책 성과를 거뒀습니다. </p>
 
           <h4 id="intro-1"><span>2021년 KAIST 대학원 총학생회 연구환경 실태조사</span></h4>
-          <img class="center" style="margin:auto; width:100%;" src="img/survey.png">
+          <img class="center" style="margin:auto; width:100%;" src="img/survey.png" alt="2021 KAIST 연구환경실태조사 포스터">
           <br>
           <p>올해 연구환경 실태조사의 의미는 그 여느 때보다 특별했습니다.</p>
           <p>더욱 전문적인 설문조사로 거듭나기 위해 사회통계 전공 연구위원을 초빙하였고, 전문가의 자문 및 검토를 받았습니다.</p>
