--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </ul>
         <li><a href="#money">경제적 환경</a></li>
         <li><a href="#time">시간</a></li>
-        <li><a href="#happiness">만족도</a></li>
+        <li><a href="#happiness">대학원생을 행복하게 만드는 요인들</a></li>
         <li><a href="#careerpath">진로</a></li>
         <li><a href="#wordcloud">원총에게 바란다</a></li>
       </ul>
@@ -86,17 +86,29 @@
           <p>주말 출근, 물가는 올라도 오르지 않는 월급, 불안한 실험실 환경, ... <p>
           <p>우리 연구실만 그런 것 아닐까, 한 번쯤 궁금하지 않으셨나요?</p>
           <p><strong>KAIST 대학원 총학생회 연구환경 실태조사(이하 연환실)</strong>는 이러한 궁금증에서 시작했습니다.</p>
-          <p>더 나은 연구 환경을 만들기 위해서는 객관적이고 수치에 기반한 구체적인 근거가 필요합니다. </p>
-          <p>우리 원총은 KAIST 대학원생의 연구환경 실상을 제대로 파악하여 제도 개선을 위한 기초 자료로 활용하기 위해 2004년부터 매년 연말 연환실을 시행하고 잇습니다. </p>
-          <p>연환실을 근거로 작년 한 해에만 해도<mark>1. 석박사 인건비 계상기준 인상, 2. 연차초과자 등록금 인하, 3. 보다 유연한 전문연구요원 유연복무제 도입</mark> 등의 굵직한 정책 성과를 거뒀습니다. </p>
 
           <h4 id="intro-1"><span>2021년 KAIST 대학원 총학생회 연구환경 실태조사</span></h4>
           <img class="center" style="margin:auto; width:100%;" src="img/survey.png" alt="2021 KAIST 연구환경실태조사 포스터">
           <br>
-          <p>올해 연구환경 실태조사의 의미는 그 여느 때보다 특별했습니다.</p>
-          <p>더욱 전문적인 설문조사로 거듭나기 위해 사회통계 전공 연구위원을 초빙하였고, 전문가의 자문 및 검토를 받았습니다.</p>
-          <p>또, 귀중하게 모인 데이터가 더욱 널리 확산되도록 하기 위해 예년과는 달리 학우 여러분이 편안하게 조사 결과를 볼 수 있도록 본 페이지를 만들었습니다.</p>
-          <p>지금부터 2021년 연구환경 실태조사 결과 중 학우 여러분이 알아야 꼭 알아야 할 핵심적인 내용만을 소개드립니다!</p>
+          <div style="border: 1px solid #999; width:100%; font-family:'Nanum Myeongjo'; font-size:7px; padding: 0 2.7vw 0 1vw ;">
+            <ul style="list-style:none; text-align: justify-all; padding-top: 20px;">
+              <li style="padding-left:-30px;">조사 목적 : KAIST 대학원생의 연구 환경 실태 파악 및 연구 환경 개선을 위한 근거 자료 확보</li>
+              <li>조사 대상 : KAIST 대전캠퍼스 (문지캠퍼스 포함) 소속 대학원생</li>
+              <li>조사 방식 : Google 설문지를 이용한 인터넷 설문 조사</li>
+              <li>설문 기간 : 2021년 11월 08일 - 2021년 11월 21일</li>
+              <li>응답자 수 : 1,648명 (6,575명 중 25.06% 응답)</li>
+              <li>조사 기관 : 제49대 KAIST 대학원 총학생회 edge</li>
+              <li>* 2021 연구환경실태조사 결과 인용 시에는 반드시 KAIST 대학원 총학생회와 협의해 주세요.</li>
+            </ul>
+
+          </div>
+          <br>
+          <p>더 나은 연구 환경을 만들기 위해서는 객관적이고 수치에 기반한 구체적인 근거가 필요합니다. </p>
+          <p>우리 원총은 KAIST 대학원생의 연구환경 실상을 제대로 파악하여 제도 개선을 위한 기초 자료로 활용하기 위해 2004년부터 매년 연말 연환실을 시행하고 있습니다. </p>
+          <p>연환실을 근거로 2021년 한 해에만 해도<mark>1. 석박사 인건비 계상기준 인상, 2. 연차초과자 등록금 인하, 3. 보다 유연한 전문연구요원 유연복무제 도입</mark> 등의 굵직한 정책 성과를 거뒀습니다. </p>
+
+          <p>아래부터는 귀중하게 모인 데이터가 더욱 널리 확산될 수 있도록 2021년 연구환경 실태조사 결과 중 학우 여러분이 알아야 꼭 알아야 할 핵심적인 내용만을 소개드립니다!</p>
+
 
           <h4 id="intro-2"><span>전체 응답자 수</span></h4>
           <div class="lazy" id="value" style="font-size:8vw; text-align:center;">1648</div>
@@ -112,7 +124,10 @@
 
 
           <br>
-          <p>지난 2020년 연환실보다는 약간 감소하였지만 예년보다 조사기간이 일주일 적었던 점,학기 중인 11월에 진행한 설문조사라는 점에서 높은 응답율을 보인 것으로 내부에서는 평가하고 있습니다. </p>
+          <p>올해 연한실 응답자 수는 지난 2020년 연환실보다는 약간 감소하였습니다.</p>
+          <p>예년보다 조사기간이 일주일 적었던 점,학기 중인 11월에 진행한 설문조사라는 점이 응답율이 저하된 원인으로 보입니다.</p>
+          <p>연환실은 우리의 미래를 바꾸는 가장 효과적인 대안 중 하나입니다. </p>
+          <p><mark>학우 여러분의 적극적인 참여를 부탁드립니다.</mark></p>
           <br>
           <h4 id="intro-4"><span>응답자 성별 및 연령</span></h4>
           <br>
@@ -123,23 +138,25 @@
           <br>
           <p>설문에 응답한 학우 여러분의 간단한 인구 통계학적 특성을 위의 인구 피라미드로 표현하였습니다.</p>
           <p>응답자 중 자신이 남성이라고 응답한 사람은 <mark>1,175명(71.3%)</mark>, 여성이라고 응답한 사람은 <mark>464명(28.16%)</mark>, 그리고 기타 성별이라고 응답한 사람은 <mark>9명(0.55%)</mark>이었습니다.</p>
+          <p>인구통계학적 특성에 따라 정책의 초점이 달라질 수 있습니다.</p>
+          <p>다수의 학우들에게 혜택이 돌아가도록 하면서, 소수의 학우들의 목소리는 무시되지 않도록 정책을 만들겠습니다. </p>
           <p>&#128161; 이번 연환실 응답자의 인구통계학적 특성이 더 궁금하다면? </p>
-          <li><a href="#">2021년 연구환경실태조사 응답자 정보 인포그램 바로가기</a></li>
+          <a href="#">2021년 연구환경실태조사 응답자 정보 인포그램 바로가기</a>
         </div>
       </div>
 
       <div class="row paragraph" id="money">
           <h1>경제적 환경</h1>
           <p>경제적 환경은 연구 환경을 결정하는 가장 중요한 요소입니다.</p>
-          <p>이번 연환실 결과를 바탕으로 자신의 경제적 환경에 대해 진단하고, 개선이 필요한 지 고민해 보시기 바랍니다. </p>
+          <p>이번 연환실 결과를 바탕으로 자신의 경제적 환경에 대해 진단해 보시기 바랍니다. </p>
           <h4>당신이 한 달 동안 받는 월급(교내수입)은 얼마인가요?</h4>
           <br>
 <!--          <div style="text-align: center"><input style="width:80px; height:37.5px; border-width: 2px; text-align: center" min="0" max="10000" type="number">만원 <button class="btn btn-outline-dark" type="submit" id="cl">입력</button></div>-->
-          <div class="input-group mb-3 w-50 center">
-            <input id="salaryInput" style="width:10%!important;" class="form-control" placeholder="월 교내수입(만원)" min="0" max="10000" type="number">
+          <div class="input-group mb-3 w-75 center">
+            <input id="salaryInput" class="form-control" placeholder="월 교내수입(만원)" min="0" max="10000" type="number">
             <div class="input-group-append">
               <button class="btn btn-outline-dark" type="submit" id="cl">입력</button></div>
-            </div>
+          </div>
             <div id="salaryDiv" style="display: none;">
 
               <div class="d-flex justify-content-center">
@@ -148,65 +165,112 @@
               <p>당신은 우리 학교 대학원생이 100명이라고 했을 때, <mark id="salaryNth"></mark>로 많은 월급을 받고 있습니다.</p>
               <p id="salaryResult"></p>
               <p>KAIST 대학원생이 받고 있는 인건비의 중위값은 <mark>150만원</mark>으로 조사되었습니다. 그러나, 이 금액은 KAIST 장학생이 인건비로 돌려받는 학연장려금2(구. 지도교수 분담금)이 포함된 금액으로, 실제 평균 금액은 이보다 더 낮을 것으로 예상됩니다.</p>
-              <p>중위값 150만원을 기준으로 계산하였을 때, KAIST 대학원생들의 평균 시급은 <mark>7,211원</mark>으로 법정 최저시급 <mark>1,949원</mark> 못미치는 금액입니다.</p>
-              <p><mark>KAIST 대학원생의 경제적 환경의 조속한 개선이 필요한 것을 확인하였습니다.</mark></p>
-              <p>&#128161; KAIST 대학원생의 경제적 환경이 더 궁금하다면? </p>
-              <li style="margin-left:50px; margin-right:50px;"><a href="#">2021년 연구환경실태조사 경제적 환경 인포그램 바로가기</a></li>
             </div>
+        <br><br>
+        <p>중위값 150만원, 주 52시간을 기준으로 계산하였을 때, KAIST 대학원생들의 평균 시급은 <mark>7,211원</mark>으로 법정 최저시급 <mark>1,949원</mark> 못미치는 금액입니다.</p>
+        <p><mark>KAIST 대학원생의 조속한 경제적 환경 개선이 필요해 보입니다.</mark></p>
+        <p>&#128161; KAIST 대학원생의 경제적 환경이 더 궁금하다면? </p>
+        <a href="#">2021년 연구환경실태조사 경제적 환경 인포그램 바로가기</a>
       </div>
 
       <div class="row paragraph" id="time">
         <div class="col">
-          <h1>시간</h1>
-          <p>KAIST 대학원생의 하루는 어떨까요?</p>
-          <p>우리의 시간은 돈만큼 소중합니다. 소중한 시간 자원이 어떻게 쓰이고 있는 지 확인해 보시기 바랍니다.</p>
+          <h1>연구 수행 환경</h1>
+          <p>KAIST 대학원생의 하루 일과는 어떨까요?</p>
           <div class="d-flex justify-content-center">
             <div class="lazy" id="timeChart"></div>
           </div>
-
           <p>우리 대학원생들의 주중 평균 연구실 체류시간은 <mark>9.94시간</mark>으로 조사었습니다.</p>
           <p>이 중에서 학위 연구에 사용하는 시간인 주중 평균 학위 연구시간은 <mark>7.31시간</mark>으로 나타났습니다.</p>
           <p>특이할 것은 주말에도 연구실에 체류하는 시간이 <mark>3.06시간</mark>이나 되며, 주말에 학위연구에 사용하는 시간은 <mark>3.22시간</mark>이나 됩니다.</p>
+          <p><mark>KAIST 대학원생에게는 충분한 휴식 시간이 필요해 보입니다.</mark></p>
           <p>&#128161; KAIST 대학원생이 주말에도 출근하는 이유가 궁금하다면? </p>
-          <li><a href="#">2021년 연구환경실태조사 연구 수행환경 인포그램 바로가기</a></li>
+          <a href="#">2021년 연구환경실태조사 연구 수행환경 인포그램 바로가기</a>
 
         </div>
       </div>
 
       <div class="row paragraph" id="happiness">
         <div class="col">
-          <h1 >만족도</h1>
-          <p>행복한 대학원 생활을 만드는 요인은 무엇일까요?</p>
-          <p>이번 연구환경 실태조사에서는 대학원 생활의 행복도를 묻는 문항이 있었습니다.</p>
-          <p>행복하다고 응답한 학우들과 불행하다고 응답한 학우들의 차이는 어디서 비롯된 것일까요? </p>
+          <h1>대학원생을 행복하게 만드는 요인들</h1>
+          <p>행복한 대학원 생활은 어떻게 만들 수 있을까요?</p>
+          <p>대학원 생활 행복도를 묻는 질문에 응답한 결과를 바탕으로 어떠한 요인들이 대학원 생활을 행복하게 만드는 지 분석하였습니다.</p>
           <div id="happy"></div>
-          <p>지도 교수의 연구 지도와 관련한 변수 중에서는 <mark>‘학위 지도를 위한 지도 교수의 충분한 시간 할애’</mark>와 <mark>‘학위 연구 방향에 대한 의견 존중’</mark></p>
-          <p>진로 지도와 관련한 변수 중에는 <mark>‘졸업 후 진로에 대한 지도 교수의 적절한 조언’</mark>과 <mark>‘진로 방향에 대한 나의 의사 존중’</mark></p>
-          <p>연구실 생활과 관련한 변수 중에는 <mark>‘잘 갖춰진 사무용 전자 기기’</mark>와 <mark>‘잦은 회식 등 친목 행사’</mark><p>
-          <p>가 대학원 생활 행복도에 통계적으로 유의한 수준의 정(+)의 영향을 미치고 있는 것으로 분석되었습니다.</p>
-          <p>반면, 지도 교수의 지도 방식 중 ‘연구실 실적에 필요 이상 집착’과 ‘학생 간 차별적인 지도’, 그리고 연구실 생활에서 ‘주말 및 공휴일 체류 시간’, 개인 활용 공간’, ‘지나친 무관심’, ‘일과 후 업무 연락’, ‘수직적 자세/태도’는 대학원 생활 행복도에 통계적으로 유의한 수준의 부(-)의 영향을 미치고 있음</p>
+          <p></p>
+          <ul>
+            <strong>정적으로 유의한 변수들 (positively significant variables)</strong>
+            <ul>
+              <li>학위 지도를 위한 지도 교수의 충분한 시간 할애</li>
+              <li>학위 연구 방향에 대한 의견 존중</li>
+              <li>졸업 후 진로에 대한 지도 교수의 적절한 조언</li>
+              <li>진로 방향에 대한 나의 의사 존중</li>
+              <li>잘 갖춰진 사무용 전자 기기</li>
+              <li>잦은 회식 등 친목 행사</li>
+            </ul>
+            <br>
+            <strong>유의하지 않은 변수 (nonsignificant variables)</strong>
+            <ul>
+              <li>학위 연구에 대한 지도 교수의 이해도</li>
+              <li>학계 트렌드에 대한 정보</li>
+              <li>연구 윤리 부족</li>
+              <li>연구실 실적에 필요 이하로 무관심</li>
+              <li>주중(월~금) 체류 시간</li>
+              <li>잘 갖춰진 실험 장비</li>
+              <li>잘 갖춰진 사무 기구</li>
+              <li>지나친 관심</li>
+              <li>사적인 업무 동원</li>
+            </ul>
+            <br>
+            <strong>부적으로 유의한 변수들 (negatively significant variables)</strong>
+            <ul>
+              <li>연구실 실적에 필요 이상 집착</li>
+              <li>학생 간 차별적인 지도</li>
+              <li>주말 및 공휴일 체류 시간</li>
+              <li>개인 활용 공간</li>
+              <li>지나친 무관심</li>
+              <li>일과 후 업무 연락</li>
+              <li>수직적 자세/태도</li>
+            </ul>
+          </ul>
+          <p>&#128161;자세한 분석 내용은 2021 KAIST 연구환경 실태조사 보고서 PDF 파일을 참고해주시기 바랍니다.</p>
+          <p><a href="#report">2021 KAIST 연구환경 실태조사 보고서 바로가기</a></p>
         </div>
       </div>
 
       <div class="row paragraph" id="careerpath">
         <div class="col">
           <h1>진로</h1>
-          <!-- Create a div where the graph will take place -->
+          <p>KAIST에서의 경험은 우리를 어떤 미래로 안내할까요?</p>
+          <p>대학원 입학 시점 희망했던 진로와 현재 시점에서 희망하는 진로에 대해 물었습니다.</p>
+
           <div id="my_dataviz"></div>
-
-          <!-- Create a div for the tooltip -->
           <div id="tooltip"></div>
-
-
+          <br>
+          <p>그래프 위로 마우스를 올려 놓으세요.</p>
+          <p>입학 시점과 현재 시점 진로가 변경된 것은 긍정적인 변화일 수도, 부정적인 변화일 수도 있습니다. </p>
+          <p>그러나 이러한 변화를 만드는 요인이 무엇인지에 대해서는 눈 여겨 봐야 할 대목입니다.</p>
+          <p>&#128161; KAIST 대학원생의 진로에 대해 더 궁금하다면? </p>
+          <a href="#">2021년 연구환경실태조사 대학원 생활 인포그램 바로가기</a>
         </div>
 
       </div>
       <div class="row paragraph" id="wordcloud">
         <div class="col">
-          <h1>워드클라우드</h1>
+          <h1>우리의 목소리</h1>
           <div id="cloud"></div>
+          <br>
+          <p>위 워드 클라우드의 단어들은 이번 연환실에서 기타 의견으로 적어 준 내용에서 명사만 추출하여 빈도수를 계산한 것입니다. </p>
+          <p>학우 여러분이 전달해 주신 목소리를 잘 새겨 듣고 대학원 생활에 반드시 꼭 필요한 원총이 될 수 있도록 노력하겠습니다.</p>
+          <p>&#128161; 다른 학우들의 목소리가 더 궁금하다면? </p>
+          <a href="#">2021년 연구환경실태조사 대학원 총학생회에 바라는 점 인포그램 바로가기</a>
         </div>
-
+      </div>
+      <div class = "row paragraph" id="info">
+        <div class="col">
+          <h5>2021 연구환경 실태조사 보고서</h5>
+          <p id="report"><a href="#">보고서 다운로드</a></p>
+          <div class="padlet-embed" style="border:1px solid rgba(0,0,0,0.1);border-radius:2px;box-sizing:border-box;overflow:hidden;position:relative;width:100%;background:#F4F4F4"><p style="padding:0;margin:0"><iframe src="https://padlet.com/embed/8502j4ocn7k8syj1" frameborder="0" allow="camera;microphone;geolocation" style="width:100%;height:608px;display:block;padding:0;margin:0"></iframe></p><div style="padding:8px;text-align:right;margin:0;"><a href="https://padlet.com?ref=embed" style="padding:0;margin:0;border:none;display:block;line-height:1;height:16px" target="_blank"><img src="https://padlet.net/embeds/made_with_padlet.png" width="86" height="16" style="padding:0;margin:0;background:none;border:none;display:inline;box-shadow:none" alt="Padlet으로 만듦"></a></div></div>
+        </div>
       </div>
     </div>
   </section>
