--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
           <li><a href="#intro-3">역대 참여 인원 비교</a></li>
           <li><a href="#intro-4">응답자 성별 및 연령</a></li>
         </ul>
-        <li><a href="#money">경제적 환경</a></li>
+        <li><a href="#money">인건비</a></li>
         <li><a href="#time">시간</a></li>
-        <li><a href="#happiness">대학원생을 행복하게 만드는 요인들</a></li>
+        <li><a href="#happiness">행복</a></li>
         <li><a href="#careerpath">진로</a></li>
-        <li><a href="#wordcloud">원총에게 바란다</a></li>
+        <li><a href="#wordcloud">원총에 바란다</a></li>
+        <li><a href="#info">더 알아보기</a></li>
       </ul>
       <svg class="toc-marker" width="200" height="200" xmlns="http://www.w3.org/2000/svg">
         <path stroke="#444" stroke-width="3" fill="transparent" stroke-dasharray="0, 0, 0, 1000" stroke-linecap="round" stroke-linejoin="round" transform="translate(-0.5, -0.5)" />
@@ -80,7 +81,6 @@
         <div class="col">
 
           <h1>들어가며</h1>
-
           <h4 id="intro-0"><span>"연구실 생활, 나만 이렇게 힘들어?"</span></h4>
           <br>
           <p>주말 출근, 물가는 올라도 오르지 않는 월급, 불안한 실험실 환경, ... <p>
@@ -103,12 +103,11 @@
 
           </div>
           <br>
-          <p>더 나은 연구 환경을 만들기 위해서는 객관적이고 수치에 기반한 구체적인 근거가 필요합니다. </p>
-          <p>우리 원총은 KAIST 대학원생의 연구환경 실상을 제대로 파악하여 제도 개선을 위한 기초 자료로 활용하기 위해 2004년부터 매년 연말 연환실을 시행하고 있습니다. </p>
-          <p>연환실을 근거로 2021년 한 해에만 해도<mark>1. 석박사 인건비 계상기준 인상, 2. 연차초과자 등록금 인하, 3. 보다 유연한 전문연구요원 유연복무제 도입</mark> 등의 굵직한 정책 성과를 거뒀습니다. </p>
-
-          <p>아래부터는 귀중하게 모인 데이터가 더욱 널리 확산될 수 있도록 2021년 연구환경 실태조사 결과 중 학우 여러분이 알아야 꼭 알아야 할 핵심적인 내용만을 소개드립니다!</p>
-
+          <p>우리 원총은 KAIST 대학원생의 연구환경 실상을 제대로 파악하여 더 나은 연구 환경을 만들기 위한 기초 자료로 활용하기 위해 2004년부터 매년 연말 연환실을 시행하고 있습니다. </p>
+          <p>더 나은 연구 환경을 만들기 위해서는 객관적이고 수치에 기반한 구체적인 근거가 필요하기 때문입니다.</p>
+          <p>연환실을 근거로 2021년 한 해에만 해도<mark>1. 석박사 인건비 계상기준 인상, 2. 연차초과자 등록금 인하, 3. 보다 유연한 전문연구요원 유연복무제 도입</mark> 등의 굵직한 정책 성과를 거둘 수 있었습니다.</p>
+          <p>귀중하게 모은 데이터가 더욱 널리 확산되어 더욱 빠른 시간 안에 제도 개선을 이룰 수 있도록 본 페이지를 만들었습니다.</p>
+          <p>아래부터는 연환실 결과 중 학우 여러분이 꼭 알아야 할 핵심적인 내용만을 요약해 보았습니다!</p>
 
           <h4 id="intro-2"><span>전체 응답자 수</span></h4>
           <div class="lazy" id="value" style="font-size:8vw; text-align:center;">1648</div>
@@ -124,9 +123,9 @@
 
 
           <br>
-          <p>올해 연한실 응답자 수는 지난 2020년 연환실보다는 약간 감소하였습니다.</p>
-          <p>예년보다 조사기간이 일주일 적었던 점,학기 중인 11월에 진행한 설문조사라는 점이 응답율이 저하된 원인으로 보입니다.</p>
-          <p>연환실은 우리의 미래를 바꾸는 가장 효과적인 대안 중 하나입니다. </p>
+          <p>올해 연환실 응답자 수는 지난 2020년보다 약간 감소하였습니다.</p>
+          <p>예년보다 조사기간이 일주일 적었던 점, 학기 중인 11월에 진행한 설문조사라는 점이 응답율이 저하된 원인으로 보입니다.</p>
+          <p>연환실은 KAIST 대학원의 미래를 바꾸는 가장 효과적인 대안 중 하나입니다. </p>
           <p><mark>학우 여러분의 적극적인 참여를 부탁드립니다.</mark></p>
           <br>
           <h4 id="intro-4"><span>응답자 성별 및 연령</span></h4>
@@ -138,18 +137,18 @@
           <br>
           <p>설문에 응답한 학우 여러분의 간단한 인구 통계학적 특성을 위의 인구 피라미드로 표현하였습니다.</p>
           <p>응답자 중 자신이 남성이라고 응답한 사람은 <mark>1,175명(71.3%)</mark>, 여성이라고 응답한 사람은 <mark>464명(28.16%)</mark>, 그리고 기타 성별이라고 응답한 사람은 <mark>9명(0.55%)</mark>이었습니다.</p>
-          <p>인구통계학적 특성에 따라 정책의 초점이 달라질 수 있습니다.</p>
-          <p>다수의 학우들에게 혜택이 돌아가도록 하면서, 소수의 학우들의 목소리는 무시되지 않도록 정책을 만들겠습니다. </p>
+          <p>또, 전체 응답자 중 <mark>27 ~ 29세(42.6%)</mark>라고 응답한 사람이 가장 많았습니다.</p>
+          <p>다수의 학우들에게 혜택이 돌아가도록 하면서, 소수의 학우들의 목소리는 무시되지 않는 균형있는 정책이 만들어질 수 있도록 본 응답 결과를 활용 하겠습니다. </p>
           <p>&#128161; 이번 연환실 응답자의 인구통계학적 특성이 더 궁금하다면? </p>
-          <a href="#">2021년 연구환경실태조사 응답자 정보 인포그램 바로가기</a>
+          <a class="link-dark" href="https://infogram.com/2021-9-1h7j4dv18wxzv4n?live">2021년 연구환경실태조사 인적사항 인포그램 바로가기</a>
         </div>
       </div>
 
       <div class="row paragraph" id="money">
-          <h1>경제적 환경</h1>
+          <h1>인건비</h1>
           <p>경제적 환경은 연구 환경을 결정하는 가장 중요한 요소입니다.</p>
           <p>이번 연환실 결과를 바탕으로 자신의 경제적 환경에 대해 진단해 보시기 바랍니다. </p>
-          <h4>당신이 한 달 동안 받는 월급(교내수입)은 얼마인가요?</h4>
+        <h4><span>당신이 한 달 동안 받는 월급(교내수입)은 얼마인가요?</span></h4>
           <br>
 <!--          <div style="text-align: center"><input style="width:80px; height:37.5px; border-width: 2px; text-align: center" min="0" max="10000" type="number">만원 <button class="btn btn-outline-dark" type="submit" id="cl">입력</button></div>-->
           <div class="input-group mb-3 w-75 center">
@@ -170,35 +169,34 @@
         <p>중위값 150만원, 주 52시간을 기준으로 계산하였을 때, KAIST 대학원생들의 평균 시급은 <mark>7,211원</mark>으로 법정 최저시급 <mark>1,949원</mark> 못미치는 금액입니다.</p>
         <p><mark>KAIST 대학원생의 조속한 경제적 환경 개선이 필요해 보입니다.</mark></p>
         <p>&#128161; KAIST 대학원생의 경제적 환경이 더 궁금하다면? </p>
-        <a href="#">2021년 연구환경실태조사 경제적 환경 인포그램 바로가기</a>
+        <a class="link-dark" href="https://infogram.com/2021-4-1ho16vo1zk0dx4n?live">2021년 연구환경실태조사 경제적 환경 인포그램 바로가기</a>
       </div>
 
       <div class="row paragraph" id="time">
         <div class="col">
-          <h1>연구 수행 환경</h1>
-          <p>KAIST 대학원생의 하루 일과는 어떨까요?</p>
+          <h1>시간</h1>
+          <h4><span>KAIST 대학원생의 하루 일과는 어떨까요?</span></h4>
           <div class="d-flex justify-content-center">
             <div class="lazy" id="timeChart"></div>
           </div>
-          <p>우리 대학원생들의 주중 평균 연구실 체류시간은 <mark>9.94시간</mark>으로 조사었습니다.</p>
-          <p>이 중에서 학위 연구에 사용하는 시간인 주중 평균 학위 연구시간은 <mark>7.31시간</mark>으로 나타났습니다.</p>
-          <p>특이할 것은 주말에도 연구실에 체류하는 시간이 <mark>3.06시간</mark>이나 되며, 주말에 학위연구에 사용하는 시간은 <mark>3.22시간</mark>이나 됩니다.</p>
-          <p><mark>KAIST 대학원생에게는 충분한 휴식 시간이 필요해 보입니다.</mark></p>
+          <p>우리 대학원생들의 주중 평균 연구실 체류시간은 <mark>9.94시간</mark>으로 조사 되었습니다.</p>
+          <p>이 중에서 주중 평균 학위 연구시간은 <mark>7.31시간</mark>으로 나타났습니다.</p>
+          <p>특이할 것은 주말에도 연구실에 체류하는 시간이 <mark>3.06시간</mark>이나 되며, 주말에 학위연구에 사용하는 시간은 <mark>3.22시간</mark>이나 된다는 점입니다.</p>
+          <p><mark>대학원생에게 충분한 휴식 시간이 보장되는 연구 수행 환경이 조성되어야 할 것 같습니다.</mark></p>
           <p>&#128161; KAIST 대학원생이 주말에도 출근하는 이유가 궁금하다면? </p>
-          <a href="#">2021년 연구환경실태조사 연구 수행환경 인포그램 바로가기</a>
+          <a class="link-dark" href="https://infogram.com/2021-2-1h8n6m3e5179z4x?live">2021년 연구환경실태조사 연구 수행환경 인포그램 바로가기</a>
 
         </div>
       </div>
 
       <div class="row paragraph" id="happiness">
         <div class="col">
-          <h1>대학원생을 행복하게 만드는 요인들</h1>
-          <p>행복한 대학원 생활은 어떻게 만들 수 있을까요?</p>
+          <h1>행복</h1>
+          <h4><span>행복한 대학원 생활은 어떻게 만들 수 있을까요?</span></h4>
           <p>대학원 생활 행복도를 묻는 질문에 응답한 결과를 바탕으로 어떠한 요인들이 대학원 생활을 행복하게 만드는 지 분석하였습니다.</p>
           <div id="happy"></div>
-          <p></p>
           <ul>
-            <strong>정적으로 유의한 변수들 (positively significant variables)</strong>
+            <strong style="background-color: #91C483;">정적으로 유의한 변수들 (positively significant variables)</strong>
             <ul>
               <li>학위 지도를 위한 지도 교수의 충분한 시간 할애</li>
               <li>학위 연구 방향에 대한 의견 존중</li>
@@ -208,7 +206,7 @@
               <li>잦은 회식 등 친목 행사</li>
             </ul>
             <br>
-            <strong>유의하지 않은 변수 (nonsignificant variables)</strong>
+            <strong style="background-color: #EEEEEE;">유의하지 않은 변수 (nonsignificant variables)</strong>
             <ul>
               <li>학위 연구에 대한 지도 교수의 이해도</li>
               <li>학계 트렌드에 대한 정보</li>
@@ -221,7 +219,7 @@
               <li>사적인 업무 동원</li>
             </ul>
             <br>
-            <strong>부적으로 유의한 변수들 (negatively significant variables)</strong>
+            <strong style="background-color: #FF6464;">부적으로 유의한 변수들 (negatively significant variables)</strong>
             <ul>
               <li>연구실 실적에 필요 이상 집착</li>
               <li>학생 간 차별적인 지도</li>
@@ -232,50 +230,80 @@
               <li>수직적 자세/태도</li>
             </ul>
           </ul>
-          <p>&#128161;자세한 분석 내용은 2021 KAIST 연구환경 실태조사 보고서 PDF 파일을 참고해주시기 바랍니다.</p>
-          <p><a href="#report">2021 KAIST 연구환경 실태조사 보고서 바로가기</a></p>
+          <p>각 변수들과 행복도와의 관계에 대한 자세한 해석은 학우 여러분 판단에 맡기겠습니다. :)</p>
+          <p>정적으로 유의한 변수들은 더욱 강화하고, 부적으로 유의한 변수들은 줄일 수 있는 제도와 정책을 만들어 가겠습니다.</p>
+          <p>&#128161; 어떻게 분석되었는지 자세한 내용이 궁금하다면?</p>
+          <p><a class="link-dark" href="#report">2021 KAIST 연구환경 실태조사 보고서 바로가기</a></p>
         </div>
       </div>
 
       <div class="row paragraph" id="careerpath">
         <div class="col">
           <h1>진로</h1>
-          <p>KAIST에서의 경험은 우리를 어떤 미래로 안내할까요?</p>
+          <h4><span>KAIST에서의 경험은 우리를 어떤 미래로 안내할까요?</span></h4>
           <p>대학원 입학 시점 희망했던 진로와 현재 시점에서 희망하는 진로에 대해 물었습니다.</p>
 
           <div id="my_dataviz"></div>
           <div id="tooltip"></div>
           <br>
-          <p>그래프 위로 마우스를 올려 놓으세요.</p>
+          <p><mark>그래프 위로 마우스를 올려 놓아 보세요.</mark></p>
           <p>입학 시점과 현재 시점 진로가 변경된 것은 긍정적인 변화일 수도, 부정적인 변화일 수도 있습니다. </p>
           <p>그러나 이러한 변화를 만드는 요인이 무엇인지에 대해서는 눈 여겨 봐야 할 대목입니다.</p>
           <p>&#128161; KAIST 대학원생의 진로에 대해 더 궁금하다면? </p>
-          <a href="#">2021년 연구환경실태조사 대학원 생활 인포그램 바로가기</a>
+          <a class="link-dark" href="https://infogram.com/2021-1-1h7k230rp58dg2x?live">2021년 연구환경실태조사 대학원 생활 인포그램 바로가기</a>
         </div>
 
       </div>
       <div class="row paragraph" id="wordcloud">
         <div class="col">
-          <h1>우리의 목소리</h1>
+          <h1>원총에 바란다</h1>
           <div id="cloud"></div>
           <br>
-          <p>위 워드 클라우드의 단어들은 이번 연환실에서 기타 의견으로 적어 준 내용에서 명사만 추출하여 빈도수를 계산한 것입니다. </p>
+          <p>워드 클라우드의 단어들은 이번 연환실에서 기타 의견으로 적어 준 내용에서 명사만 추출하여 빈도수를 계산한 것입니다. </p>
+          <p>이미 제도 개선을 위해 애쓰고 있는 키워드들도 있지만, 미처 챙기지 못해 아차 싶었던 코멘트들도 많이 있었습니다. </p>
           <p>학우 여러분이 전달해 주신 목소리를 잘 새겨 듣고 대학원 생활에 반드시 꼭 필요한 원총이 될 수 있도록 노력하겠습니다.</p>
           <p>&#128161; 다른 학우들의 목소리가 더 궁금하다면? </p>
-          <a href="#">2021년 연구환경실태조사 대학원 총학생회에 바라는 점 인포그램 바로가기</a>
+          <a class="link-dark" href="https://infogram.com/2021-10-1h7k230rmo9nv2x?live">2021년 연구환경실태조사 대학원 총학생회에 바라는 점 인포그램 바로가기</a>
         </div>
       </div>
       <div class = "row paragraph" id="info">
         <div class="col">
-          <h5>2021 연구환경 실태조사 보고서</h5>
-          <p id="report"><a href="#">보고서 다운로드</a></p>
+          <h1>더 알아보기</h1>
+          <strong>2021 연구환경 실태조사 보고서</strong>
+          <p id="report"><a class="link-dark" href="https://bit.ly/3InR4y8">보고서 다운로드</a></p>
+          <strong>2021 연구환경 실태조사 인포그램 더 보러가기</strong>
+          <ol>
+            <li><a target='_blank' class="link-dark" href="https://infogram.com/2021-1-1h7k230rp58dg2x?live">2021 연구환경실태조사: 대학원 생활</a></li>
+            <li><a target='_blank' class="link-dark" href="https://infogram.com/2021-2-1h8n6m3e5179z4x?live">2021 연구환경실태조사: 연구 수행 환경</a></li>
+            <li><a target='_blank' class="link-dark" href="https://infogram.com/2021-3-1hzj4o3w579o34p?live">2021 연구환경실태조사: 연구 및 진로 지도</a></li>
+            <li><a target='_blank' class="link-dark" href="https://infogram.com/2021-4-1ho16vo1zk0dx4n?live">2021 연구환경실태조사: 경제적 환경</a></li>
+            <li><a target='_blank' class="link-dark" href="https://infogram.com/2021-5-1hdw2jpee197p2l?live">2021 연구환경실태조사: 연구 과제 및 행정 업무</a></li>
+            <li><a target='_blank' class="link-dark" href="https://infogram.com/2021-6-1h7g6k0e5g1v02o?live">2021 연구환경실태조사: 연구 윤리 및 관행</a></li>
+            <li><a target='_blank' class="link-dark" href="https://infogram.com/2021-7-1h7z2l80opp9g6o?live">2021 연구환경실태조사: 연구 환경 변화</a></li>
+            <li><a target='_blank' class="link-dark" href="https://infogram.com/2021-8-1hdw2jpej8kwp2l?live">2021 연구환경실태조사: 재학정보</a></li>
+            <li><a target='_blank' class="link-dark" href="https://infogram.com/2021-9-1h7j4dv18wxzv4n?live">2021 연구환경실태조사: 인적사항</a></li>
+            <li><a target='_blank' class="link-dark" href="https://infogram.com/2021-10-1h7k230rmo9nv2x?live">2021 연구환경실태조사: 대학원 총학생회에 바라는 점</a></li>
+          </ol>
+          <strong>연구환경 실태조사 피드백 남기기</strong>
           <div class="padlet-embed" style="border:1px solid rgba(0,0,0,0.1);border-radius:2px;box-sizing:border-box;overflow:hidden;position:relative;width:100%;background:#F4F4F4"><p style="padding:0;margin:0"><iframe src="https://padlet.com/embed/8502j4ocn7k8syj1" frameborder="0" allow="camera;microphone;geolocation" style="width:100%;height:608px;display:block;padding:0;margin:0"></iframe></p><div style="padding:8px;text-align:right;margin:0;"><a href="https://padlet.com?ref=embed" style="padding:0;margin:0;border:none;display:block;line-height:1;height:16px" target="_blank"><img src="https://padlet.net/embeds/made_with_padlet.png" width="86" height="16" style="padding:0;margin:0;background:none;border:none;display:inline;box-shadow:none" alt="Padlet으로 만듦"></a></div></div>
         </div>
       </div>
     </div>
   </section>
   <footer>
-    <p>Footer</p>
+    <div class="footer_Util_wrap00">
+      <div class="footer_Util_wrap0">
+        <!--카피라이트-->
+        <div class="gpe_copytxt">
+          <p style="font-family: SansSerif!important;">
+            Copyright © 2021 KAIST GSA. All rights reserved.<br>
+            <b>KAIST 대학원 총학생회</b> | 34141 대전광역시 유성구 대학로 291 한국과학기술원 학생회관-1(W2) 211호<br>
+            <i class="fa fa-phone" aria-hidden="true"></i> 042-350-2071 | <i class="fa fa-envelope" aria-hidden="true"></i> gsa@gsa.kaist.ac.kr</p>
+          <p style="font-family: SansSerif!important;">시각화 페이지 만든이 | 최동혁</p>
+        </div>
+
+      </div>
+    </div>
   </footer>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="https://d3js.org/d3.v6.js"></script>
@@ -296,17 +324,6 @@
   <script src="js/d3v3.js"></script>
   <script src="js/d3v3.layout.cloud.js"></script>
 
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-<script>
-
-
-</script>
 </body>
 
 </html>
