피드백 반영

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <h4 id="intro-1"><span>2021년 KAIST 대학원 총학생회 연구환경실태조사</span></h4>
           <img class="center" style="margin:auto; width:100%;" src="img/survey.png" alt="2021 KAIST 연구환경실태조사 포스터">
           <br>
-          <div style="border: 1px solid #999; width:100%; font-family:'Nanum Myeongjo'; font-size:7px; padding: 0 2.7vw 0 1vw ;">
+          <div style="border: 1px solid #999; width:100%; font-family:'Nanum Myeongjo'; font-size:12px; padding: 0 2.7vw 0 1vw ;">
             <ul style="list-style:none; text-align: justify-all; padding-top: 20px;">
               <li style="padding-left:-30px;">조사 목적: KAIST 대학원생의 연구 환경 실태 파악 및 연구 환경 개선을 위한 근거 자료 확보</li>
               <li>조사 대상: KAIST 대전캠퍼스(문지캠퍼스 포함) 소속 대학원생</li>
@@ -181,7 +181,7 @@
           </div>
           <p>우리 대학원생들의 주중 평균 연구실 체류 시간은 <mark>9.94시간</mark>으로 조사 되었습니다.</p>
           <p>이 중에서 주중 평균 학위 연구 시간은 <mark>7.31시간</mark>으로 나타났습니다.</p>
-          <p>특이한 것은 주말에도 연구실에 체류하는 시간이 <mark>3.06시간</mark>이나 되며, 주말에 학위 연구에 사용하는 시간은 <mark>3.22시간</mark>이나 된다는 점입니다.</p>
+          <p>주말에도 연구실에 체류하는 시간이 <mark>3.06시간</mark>이며, 주말에 학위 연구에 사용하는 시간은 <mark>3.22시간</mark>입니다.</p>
           <p><mark>대학원생에게 충분한 휴식 시간이 보장되는 연구 수행 환경이 조성되어야 할 것 같습니다.</mark></p>
           <p>&#128161; KAIST 대학원생이 주말에도 출근하는 이유가 궁금하다면? </p>
           <a class="link-dark" href="https://infogram.com/2021-2-1h8n6m3e5179z4x?live">2021년 연구환경실태조사 연구 수행 환경 인포그램 바로 가기</a>
@@ -270,7 +270,7 @@
         <div class="col">
           <h1>더 알아보기</h1>
           <strong>2021 연구환경실태조사 보고서</strong>
-          <p id="report"><a class="link-dark" href="https://bit.ly/3InR4y8">보고서 다운로드</a></p>
+          <p style="font-family: Noto Sans" id="report" class="link-dark"><a class="link-dark" href="https://bit.ly/3InR4y8">보고서 다운로드</a></p>
           <strong>2021 연구환경실태조사 인포그램 더 보러 가기</strong>
           <ol>
             <li><a target='_blank' class="link-dark" href="https://infogram.com/2021-1-1h7k230rp58dg2x?live">2021 연구환경실태조사: 대학원 생활</a></li>
