보고서 링크 수정

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="col">
           <h1>더 알아보기</h1>
           <strong>2021 연구환경실태조사 보고서</strong>
-          <p style="font-family: Noto Sans" id="report" class="link-dark"><a class="link-dark" href="https://bit.ly/3InR4y8">보고서 다운로드</a></p>
+          <p style="font-family: Noto Sans" id="report" class="link-dark"><a class="link-dark" href="https://gsa.kaist.ac.kr/regular_survey/194665">보고서 다운로드</a></p>
           <strong>2021 연구환경실태조사 인포그램 더 보러 가기</strong>
           <ol>
             <li><a target='_blank' class="link-dark" href="https://infogram.com/2021-1-1h7k230rp58dg2x?live">2021 연구환경실태조사: 대학원 생활</a></li>
